adding oooobjects and illwill

--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
                         3D Printed
                     </label>
                 </div>
+                <div class="form-check">
+                    <input class="form-check-input filter-checkbox" type="checkbox" value="Accessories" id="filterAccessories">
+                    <label class="form-check-label" for="filterAccessories">
+                        Accessories
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input filter-checkbox" type="checkbox" value="Spin Stick" id="filterSpinStick">
+                    <label class="form-check-label" for="filterSpinStick">
+                        Spin Stick
+                    </label>
+                </div>
                 <button id="resetFilters" class="btn btn-secondary">Reset Filters</button>
             </div>
         </section>
