--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
                         Spin Stick
                     </label>
                 </div>
+                <div class="form-check">
+                    <input class="form-check-input filter-checkbox" type="checkbox" value="B/S/T" id="filterB/S/T">
+                    <label class="form-check-label" for="filterB/S/T">
+                        B/S/T
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input filter-checkbox" type="checkbox" value="Various" id="filterVarious">
+                    <label class="form-check-label" for="filterVarious">
+                        Various
+                    </label>
+                </div>
                 <button id="resetFilters" class="btn btn-secondary">Reset Filters</button>
             </div>
         </section>
