--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                         Various
                     </label>
                 </div>
+                <div class="form-check">
+                    <input class="form-check-input filter-checkbox" type="checkbox" value="Tops" id="filterTops">
+                    <label class="form-check-label" for="filterTops">
+                        Tops
+                    </label>
+                </div>
                 <button id="resetFilters" class="btn btn-secondary">Reset Filters</button>
             </div>
         </section>
