--- a/index.html
+++ b/index.html
@@ -6,31 +6,39 @@
     <title>The Fidget List</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-pap+UQfDqUMl1r89jZyrUPoJH3sWvMzC6YdkBJYCfNh58kc6k+Vf5V6T7E9qA0H1X+eIVsm3XkR6TyrgY3QZuw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <!-- Font Awesome CSS (Removed since using inline SVG) -->
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container my-5">
         <!-- Header -->
-        <header class="mb-4">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="text-center w-100">
+        <header class="mb-4 position-relative">
+            <div class="d-flex justify-content-center">
+                <div class="text-center">
                     <h1>The Fidget List</h1>
                     <p class="lead">A comprehensive directory of Facebook fidget groups categorized for your convenience.</p>
                 </div>
-                <a href="https://github.com/thinkjk/thefidgetlist" target="_blank" rel="noopener noreferrer" class="text-dark ms-3">
-                    <i class="fab fa-github fa-2x"></i>
-                    <span class="visually-hidden">GitHub Repository</span>
-                </a>
             </div>
+            <!-- GitHub Link -->
+            <a href="https://github.com/thinkjk/thefidgetlist" target="_blank" rel="noopener noreferrer" class="text-dark position-absolute top-0 end-0 m-3 d-flex align-items-center">
+                <!-- Inline SVG GitHub Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 
+                    6.53 5.47 7.59.4.07.55-.17.55-.38 
+                    0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+                    -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 
+                    2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 
+                    0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 
+                    0 0 .67-.21 2.2.82a7.65 7.65 0 012.01-.27c.68 0 
+                    1.36.09 2.01.27 1.53-1.04 2.2-.82 2.2-.82.44 
+                    1.1.16 1.92.08 2.12.51.56.82 1.28.82 2.15 
+                    0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 
+                    1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 
+                    8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+                <span class="ms-2">View Source</span>
+            </a>
         </header>
 
         <!-- Filter Section -->
