--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
 
     <!-- Bootstrap JS Bundle with Popper (for Bootstrap functionalities) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Initialize Bootstrap Tooltips -->
+    <script>
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    </script>
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
