--- a/index.html
+++ b/index.html
@@ -44,68 +44,90 @@
         <!-- Filter Section -->
         <section class="mb-4">
             <h2>Filter Groups</h2>
-            <div class="d-flex flex-wrap gap-3">
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Sliders" id="filterSliders">
-                    <label class="form-check-label" for="filterSliders">
-                        Sliders
-                    </label>
+            <div class="row">
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Sliders" id="filterSliders">
+                        <label class="form-check-label" for="filterSliders">
+                            Sliders
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Spinners" id="filterSpinners">
-                    <label class="form-check-label" for="filterSpinners">
-                        Spinners
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Spinners" id="filterSpinners">
+                        <label class="form-check-label" for="filterSpinners">
+                            Spinners
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Beads" id="filterBeads">
-                    <label class="form-check-label" for="filterBeads">
-                        Beads
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Beads" id="filterBeads">
+                        <label class="form-check-label" for="filterBeads">
+                            Beads
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Metal" id="filterMetal">
-                    <label class="form-check-label" for="filterMetal">
-                        Metal
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Metal" id="filterMetal">
+                        <label class="form-check-label" for="filterMetal">
+                            Metal
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="3D Printed" id="filter3DPrinted">
-                    <label class="form-check-label" for="filter3DPrinted">
-                        3D Printed
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="3D Printed" id="filter3DPrinted">
+                        <label class="form-check-label" for="filter3DPrinted">
+                            3D Printed
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Accessories" id="filterAccessories">
-                    <label class="form-check-label" for="filterAccessories">
-                        Accessories
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Accessories" id="filterAccessories">
+                        <label class="form-check-label" for="filterAccessories">
+                            Accessories
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Spin Stick" id="filterSpinStick">
-                    <label class="form-check-label" for="filterSpinStick">
-                        Spin Stick
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Spin Stick" id="filterSpinStick">
+                        <label class="form-check-label" for="filterSpinStick">
+                            Spin Stick
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="B/S/T" id="filterBST">
-                    <label class="form-check-label" for="filterBST">
-                        B/S/T
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="B/S/T" id="filterBST">
+                        <label class="form-check-label" for="filterBST">
+                            B/S/T
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Various" id="filterVarious">
-                    <label class="form-check-label" for="filterVarious">
-                        Various
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Various" id="filterVarious">
+                        <label class="form-check-label" for="filterVarious">
+                            Various
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input filter-checkbox" type="checkbox" value="Tops" id="filterTops">
-                    <label class="form-check-label" for="filterTops">
-                        Tops
-                    </label>
+                <div class="col-6 col-sm-4 col-md-3 mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input filter-checkbox" type="checkbox" value="Tops" id="filterTops">
+                        <label class="form-check-label" for="filterTops">
+                            Tops
+                        </label>
+                    </div>
                 </div>
-                <button id="resetFilters" class="btn btn-secondary">Reset Filters</button>
+                <div class="col-12">
+                    <button id="resetFilters" class="btn btn-secondary w-100">Reset Filters</button>
+                </div>
             </div>
         </section>
 
