--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Font Awesome CSS (Removed since using inline SVG) -->
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="fecb3c2b-5cc0-47e1-bb17-f7e313eacf64"></script>
 </head>
 <body>
     <div class="container my-5">
