--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>The Fidget List</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome CSS (Removed since using inline SVG) -->
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="fecb3c2b-5cc0-47e1-bb17-f7e313eacf64"></script>
 </head>
 <body>
     <div class="container my-5">
@@ -45,87 +43,10 @@
         <!-- Filter Section -->
         <section class="mb-4">
             <h2>Filter Groups</h2>
+            <div class="row" id="filtersContainer">
+                <!-- Dynamic Filter Checkboxes Will Be Injected Here -->
+            </div>
             <div class="row">
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Sliders" id="filterSliders">
-                        <label class="form-check-label" for="filterSliders">
-                            Sliders
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Spinners" id="filterSpinners">
-                        <label class="form-check-label" for="filterSpinners">
-                            Spinners
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Beads" id="filterBeads">
-                        <label class="form-check-label" for="filterBeads">
-                            Beads
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Metal" id="filterMetal">
-                        <label class="form-check-label" for="filterMetal">
-                            Metal
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="3D Printed" id="filter3DPrinted">
-                        <label class="form-check-label" for="filter3DPrinted">
-                            3D Printed
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Accessories" id="filterAccessories">
-                        <label class="form-check-label" for="filterAccessories">
-                            Accessories
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Spin Stick" id="filterSpinStick">
-                        <label class="form-check-label" for="filterSpinStick">
-                            Spin Stick
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="B/S/T" id="filterBST">
-                        <label class="form-check-label" for="filterBST">
-                            B/S/T
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Various" id="filterVarious">
-                        <label class="form-check-label" for="filterVarious">
-                            Various
-                        </label>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input filter-checkbox" type="checkbox" value="Tops" id="filterTops">
-                        <label class="form-check-label" for="filterTops">
-                            Tops
-                        </label>
-                    </div>
-                </div>
                 <div class="col-12">
                     <button id="resetFilters" class="btn btn-secondary w-100">Reset Filters</button>
                 </div>
