making the view source button look nicer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>The Fidget List</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="fecb3c2b-5cc0-47e1-bb17-f7e313eacf64"></script>
@@ -24,14 +26,9 @@
             <!-- Submit a New Group Button on the Top Left -->
             <a href="#submit-group" class="btn btn-primary position-absolute top-0 start-0 m-3">Submit a New Group</a>
 
-            <!-- GitHub Link adjusted to avoid overlap -->
-            <a href="https://github.com/thinkjk/thefidgetlist" target="_blank" rel="noopener noreferrer" class="text-dark position-absolute top-0 end-0 m-3">
-                <!-- Inline SVG GitHub Icon -->
-                <!-- [Existing SVG code] -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#4078c0" class="bi bi-github" viewBox="0 0 16 16">
-                    <!-- [SVG path data] -->
-                </svg>
-                <span class="ms-2">View Source</span>
+            <!-- View Source Button with GitHub Logo -->
+            <a href="https://github.com/thinkjk/thefidgetlist" target="_blank" rel="noopener noreferrer" class="btn btn-dark position-absolute top-0 end-0 m-3 d-flex align-items-center">
+                <i class="bi bi-github me-2"></i> View Source
             </a>
 
             <!-- Existing header content -->
