fixing / breaking lines in the cats column

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <th scope="col">Group Name</th>
                             <th scope="col">Description</th>
                             <th scope="col">Link</th>
-                            <th scope="col">Categories</th>
+                            <th scope="col" class="categories-column">Categories</th>
                         </tr>
                     </thead>
                     <tbody>
