--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="fecb3c2b-5cc0-47e1-bb17-f7e313eacf64"></script>
+     <!-- Favicon Link -->
+    <link rel="icon" href="{{ "favicon.ico" | relative_url }}" type="image/x-icon">
     <!-- Optional: Add smooth scrolling behavior -->
     <style>
         html {
