--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +8,39 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="fecb3c2b-5cc0-47e1-bb17-f7e313eacf64"></script>
+    <script defer src="https://cloud.umami.is/script.js"
+        data-website-id="fecb3c2b-5cc0-47e1-bb17-f7e313eacf64"></script>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>
         html {
             scroll-behavior: smooth;
         }
     </style>
+    <!-- Ko-fi Widget Script -->
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+        kofiWidgetOverlay.draw('thinkjk', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Support me',
+            'floating-chat.donateButton.background-color': '#ffffff',
+            'floating-chat.donateButton.text-color': '#323842'
+        });
+    </script>
 </head>
+
 <body>
     <div class="container my-5">
         <header class="mb-4 position-relative">
             <a href="#submit-group" class="btn btn-primary position-absolute top-0 start-0 m-3">Submit Content</a>
-            <a href="https://github.com/thinkjk/thefidgetlist" target="_blank" rel="noopener noreferrer" class="btn btn-dark position-absolute top-0 end-0 m-3 d-flex align-items-center">
+            <a href="https://github.com/thinkjk/thefidgetlist" target="_blank" rel="noopener noreferrer"
+                class="btn btn-dark position-absolute top-0 end-0 m-3 d-flex align-items-center">
                 <i class="bi bi-github me-2"></i> View Source
             </a>
             <div class="d-flex justify-content-center">
                 <div class="text-center">
                     <h1>The Fidget List</h1>
-                    <p class="lead">A comprehensive directory of Facebook fidget groups categorized for your convenience.</p>
+                    <p class="lead">A comprehensive directory of Facebook fidget groups categorized for your
+                        convenience.</p>
                 </div>
             </div>
         </header>
@@ -33,7 +48,8 @@
         <section class="mb-4">
             <h2>Filter Groups</h2>
             <div class="mb-3">
-                <input type="text" id="searchBar" class="form-control" placeholder="Search by fidget or group name..." />
+                <input type="text" id="searchBar" class="form-control"
+                    placeholder="Search by fidget or group name..." />
             </div>
             <div class="row" id="filtersContainer">
             </div>
@@ -91,7 +107,7 @@
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
+
     <!-- Bootstrap Tooltips -->
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
@@ -99,8 +115,33 @@
             return new bootstrap.Tooltip(tooltipTriggerEl)
         })
     </script>
-    
+
     <!-- Site Scripts -->
     <script src="script.js"></script>
+
+    <!-- Ko-fi Widget Script -->
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+        kofiWidgetOverlay.draw('thinkjk', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Support me',
+            'floating-chat.donateButton.background-color': '#ffffff',
+            'floating-chat.donateButton.text-color': '#323842'
+        });
+    </script>
+
+    <!-- Style to position Ko-fi widget at top of page -->
+    <style>
+        .floatingchat-container-wrap {
+            bottom: unset !important;
+            top: 10px !important;
+        }
+
+        .floating-chat-kofi-popup-iframe {
+            bottom: unset !important;
+            top: 70px !important;
+        }
+    </style>
 </body>
+
 </html>
